--- a/src/blocks/modules/information-systems-search/information-systems-search.scss
+++ b/src/blocks/modules/information-systems-search/information-systems-search.scss
@@ -64,7 +64,7 @@
         font-size: 1rem;
         line-height: 1.25;
         background-color: $silver-light;
-        background-image: url('/img/icons/search-icon.svg');
+        background-image: url('../img/icons/search-icon.svg');
         background-size: 24px;
         background-repeat: no-repeat;
         background-position: 12px center;
