--- a/src/templates/pages/results.html
+++ b/src/templates/pages/results.html
@@ -172,7 +172,8 @@
 
             <div class="row row--long">
                 <div class="col-12">
-                    <a href="#0" class="employee">
+                    <div class="employee">
+                        <a href="#" class="employee-link"></a>
                         <div class="employee-content">
                             <div class="employee-photo">
                                 <div class="employee-photo__inner">
@@ -184,29 +185,32 @@
                             </div>
                             <div class="employee-info">
                                 <div class="employee-info__link">Борисов<br> Виталий Николаевич</div>
-                                <div class="employee-info__position">Наладчик сварочного и газоплазморезательного
+                                <a href="#" class="employee-info__position">Наладчик сварочного и газоплазморезательного
                                     оборудования
-                                </div>
-                                <div class="employee-info__area">Безопасность производства</div>
+                                </a>
+                                <a href="#" class="employee-info__area">Безопасность производства</a>
                                 <div class="employee-info__vacation">отуствует с 28 фев по 5 мар</div>
                             </div>
                             <ul class="employee-contacts">
                                 <li class="employee-contacts__item employee-contacts__item--address">
-                                    <address>Выкса — ВМЗ — ТЭСЦ4 — Участок покрытия</address>
+
+                                        <address><a href="#">Выкса — ВМЗ — ТЭСЦ4 — Участок покрытия</a></address>
+
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--phone">
-                                    <div>882-99-10</div>
+                                    <a href="tel:882-99-10">882-99-10</a>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--mobile">
-                                    <div>+7 (909) 912-14-10</div>
+                                    <a href="tel:79099121410">+7 (909) 912-14-10</a>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--email">
-                                    <div>borisov_vn@omk.ru</div>
+                                    <a href="mailto:borisov_vn@omk.ru">borisov_vn@omk.ru</a>
                                 </li>
                             </ul>
                         </div>
-                    </a>
-                    <a href="#0" class="employee">
+                    </div>
+                    <div class="employee">
+                        <a href="#" class="employee-link"></a>
                         <div class="employee-content">
                             <div class="employee-photo">
                                 <div class="employee-photo__inner">
@@ -218,28 +222,32 @@
                             </div>
                             <div class="employee-info">
                                 <div class="employee-info__link">Борисов<br> Виталий Николаевич</div>
-                                <div class="employee-info__position">Наладчик сварочного и газоплазморезательного
+                                <a href="#" class="employee-info__position">Наладчик сварочного и газоплазморезательного
                                     оборудования
-                                </div>
-                                <div class="employee-info__area">Безопасность производства</div>
+                                </a>
+                                <a href="#" class="employee-info__area">Безопасность производства</a>
+                                <div class="employee-info__vacation">отуствует с 28 фев по 5 мар</div>
                             </div>
                             <ul class="employee-contacts">
                                 <li class="employee-contacts__item employee-contacts__item--address">
-                                    <address>Выкса — ВМЗ — ТЭСЦ4 — Участок покрытия</address>
+
+                                    <address><a href="#">Выкса — ВМЗ — ТЭСЦ4 — Участок покрытия</a></address>
+
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--phone">
-                                    <div>882-99-10</div>
+                                    <a href="tel:882-99-10">882-99-10</a>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--mobile">
-                                    <div>+7 (909) 912-14-10</div>
+                                    <a href="tel:79099121410">+7 (909) 912-14-10</a>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--email">
-                                    <div>borisov_vn@omk.ru</div>
+                                    <a href="mailto:borisov_vn@omk.ru">borisov_vn@omk.ru</a>
                                 </li>
                             </ul>
                         </div>
-                    </a>
-                    <a href="#0" class="employee">
+                    </div>
+                    <div class="employee">
+                        <a href="#" class="employee-link"></a>
                         <div class="employee-content">
                             <div class="employee-photo">
                                 <div class="employee-photo__inner">
@@ -251,27 +259,30 @@
                             </div>
                             <div class="employee-info">
                                 <div class="employee-info__link">Борисов<br> Виталий Николаевич</div>
-                                <div class="employee-info__position">Наладчик сварочного и газоплазморезательного
+                                <a href="#" class="employee-info__position">Наладчик сварочного и газоплазморезательного
                                     оборудования
-                                </div>
-                                <div class="employee-info__area">Безопасность производства</div>
+                                </a>
+                                <a href="#" class="employee-info__area">Безопасность производства</a>
+                                <div class="employee-info__vacation">отуствует с 28 фев по 5 мар</div>
                             </div>
                             <ul class="employee-contacts">
                                 <li class="employee-contacts__item employee-contacts__item--address">
-                                    <address>Выкса — ВМЗ — ТЭСЦ4 — Участок покрытия</address>
+
+                                    <address><a href="#">Выкса — ВМЗ — ТЭСЦ4 — Участок покрытия</a></address>
+
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--phone">
-                                    <div>882-99-10</div>
+                                    <a href="tel:882-99-10">882-99-10</a>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--mobile">
-                                    <div>+7 (909) 912-14-10</div>
+                                    <a href="tel:79099121410">+7 (909) 912-14-10</a>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--email">
-                                    <div>borisov_vn@omk.ru</div>
+                                    <a href="mailto:borisov_vn@omk.ru">borisov_vn@omk.ru</a>
                                 </li>
                             </ul>
                         </div>
-                    </a>
+                    </div>
                 </div>
             </div>
 
