--- a/src/styles/pages/results.scss
+++ b/src/styles/pages/results.scss
@@ -18,7 +18,13 @@
         @media(max-width: 820px) {
             padding: 0;
         }
-
+        &-link {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+        }
         @media(min-width: 821px) {
             &:hover {
                 box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.1);
@@ -87,6 +93,10 @@
             padding-left: 16px;
             font-size: 0.875rem;
             line-height: 1.2;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
             @media(max-width: $media-md) {
                 width: calc(100% - 56px);
 
@@ -111,6 +121,9 @@
 
             &__position {
                 margin: 12px 0 8px;
+                color: $text-black;
+                z-index: 2;
+                position: relative;
                 @media(max-width: $media-md) {
                     margin: 8px 0 4px;
                 }
@@ -118,6 +131,8 @@
 
             &__area {
                 color: $text-silver;
+                z-index: 2;
+                position: relative;
             }
 
             &__vacation {
@@ -147,6 +162,8 @@
             align-items: flex-start;
             list-style: none;
             width: 43%;
+            position: relative;
+            z-index: 2;
             @media(max-width: $media-md) {
                 display: none;
             }
@@ -180,7 +197,7 @@
                 }
 
                 &--phone {
-                    div {
+                    a {
                         &::before {
                             background-image: url(../img/icons/results-phone.svg);
                         }
@@ -188,7 +205,7 @@
                 }
 
                 &--mobile {
-                    div {
+                    a {
                         &::before {
                             background-image: url(../img/icons/results-mobile.svg);
                         }
@@ -196,7 +213,7 @@
                 }
 
                 &--email {
-                    div {
+                    a {
                         &::before {
                             background-image: url(../img/icons/results-email.svg);
                         }
@@ -207,7 +224,7 @@
                     margin-top: 0;
                 }
 
-                address, div {
+                address, & > a {
                     @include transition();
                     display: flex;
                     font-size: 0.875rem;
@@ -227,6 +244,13 @@
                         margin-right: 8px;
                     }
                 }
+
+                address a{
+                    font-size: 0.875rem;
+                    line-height: 1.14;
+                    color: $text-silver;
+                    white-space: nowrap;
+                }
             }
         }
     }
@@ -242,6 +266,9 @@
         margin-top: -1px;
         @media(max-width: 820px) {
             padding: 0;
+        }
+        &:hover{
+            text-decoration: none;
         }
 
 
