--- a/src/templates/pages/results-people.html
+++ b/src/templates/pages/results-people.html
@@ -77,31 +77,35 @@
             <div class="row row--long">
                 <div class="col-12">
                     <div class="employee">
+                        <a href="#" class="employee-link"></a>
                         <div class="employee-content">
-                            <a href="#0" class="employee-photo">
+                            <div class="employee-photo">
                                 <div class="employee-photo__inner">
                                     <picture>
                                         <source srcset="img/avatar.webp" type="image/webp">
                                         <img src="img/avatar.jpg" alt="Имя сотрудника">
                                     </picture>
                                 </div>
-                            </a>
+                            </div>
                             <div class="employee-info">
-                                <a href="profile.html" class="employee-info__link">Борисов Виталий Николаевич</a>
-                                <div class="employee-info__position">Наладчик сварочного и газоплазморезательного
+                                <div class="employee-info__link">Борисов<br> Виталий Николаевич</div>
+                                <a href="#" class="employee-info__position">Наладчик сварочного и газоплазморезательного
                                     оборудования
-                                </div>
-                                <div class="employee-info__area">Безопасность производства</div>
+                                </a>
+                                <a href="#" class="employee-info__area">Безопасность производства</a>
+                                <div class="employee-info__vacation">отуствует с 28 фев по 5 мар</div>
                             </div>
                             <ul class="employee-contacts">
                                 <li class="employee-contacts__item employee-contacts__item--address">
-                                    <address>Выкса — ВМЗ — ТЭСЦ4 — Участок покрытия</address>
+
+                                    <address><a href="#">Выкса — ВМЗ — ТЭСЦ4 — Участок покрытия</a></address>
+
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--phone">
                                     <a href="tel:882-99-10">882-99-10</a>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--mobile">
-                                    <a href="tel:+79099121410">+7 (909) 912-14-10</a>
+                                    <a href="tel:79099121410">+7 (909) 912-14-10</a>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--email">
                                     <a href="mailto:borisov_vn@omk.ru">borisov_vn@omk.ru</a>
@@ -110,31 +114,35 @@
                         </div>
                     </div>
                     <div class="employee">
+                        <a href="#" class="employee-link"></a>
                         <div class="employee-content">
-                            <a href="#0" class="employee-photo">
+                            <div class="employee-photo">
                                 <div class="employee-photo__inner">
                                     <picture>
                                         <source srcset="img/avatar.webp" type="image/webp">
                                         <img src="img/avatar.jpg" alt="Имя сотрудника">
                                     </picture>
                                 </div>
-                            </a>
+                            </div>
                             <div class="employee-info">
-                                <a href="profile.html" class="employee-info__link">Борисов Виталий Николаевич</a>
-                                <div class="employee-info__position">Наладчик сварочного и газоплазморезательного
+                                <div class="employee-info__link">Борисов<br> Виталий Николаевич</div>
+                                <a href="#" class="employee-info__position">Наладчик сварочного и газоплазморезательного
                                     оборудования
-                                </div>
-                                <div class="employee-info__area">Безопасность производства</div>
+                                </a>
+                                <a href="#" class="employee-info__area">Безопасность производства</a>
+                                <div class="employee-info__vacation">отуствует с 28 фев по 5 мар</div>
                             </div>
                             <ul class="employee-contacts">
                                 <li class="employee-contacts__item employee-contacts__item--address">
-                                    <address>Выкса — ВМЗ — ТЭСЦ4 — Участок покрытия</address>
+
+                                    <address><a href="#">Выкса — ВМЗ — ТЭСЦ4 — Участок покрытия</a></address>
+
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--phone">
                                     <a href="tel:882-99-10">882-99-10</a>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--mobile">
-                                    <a href="tel:+79099121410">+7 (909) 912-14-10</a>
+                                    <a href="tel:79099121410">+7 (909) 912-14-10</a>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--email">
                                     <a href="mailto:borisov_vn@omk.ru">borisov_vn@omk.ru</a>
@@ -143,31 +151,35 @@
                         </div>
                     </div>
                     <div class="employee">
+                        <a href="#" class="employee-link"></a>
                         <div class="employee-content">
-                            <a href="#0" class="employee-photo">
+                            <div class="employee-photo">
                                 <div class="employee-photo__inner">
                                     <picture>
                                         <source srcset="img/avatar.webp" type="image/webp">
                                         <img src="img/avatar.jpg" alt="Имя сотрудника">
                                     </picture>
                                 </div>
-                            </a>
+                            </div>
                             <div class="employee-info">
-                                <a href="profile.html" class="employee-info__link">Борисов Виталий Николаевич</a>
-                                <div class="employee-info__position">Наладчик сварочного и газоплазморезательного
+                                <div class="employee-info__link">Борисов<br> Виталий Николаевич</div>
+                                <a href="#" class="employee-info__position">Наладчик сварочного и газоплазморезательного
                                     оборудования
-                                </div>
-                                <div class="employee-info__area">Безопасность производства</div>
+                                </a>
+                                <a href="#" class="employee-info__area">Безопасность производства</a>
+                                <div class="employee-info__vacation">отуствует с 28 фев по 5 мар</div>
                             </div>
                             <ul class="employee-contacts">
                                 <li class="employee-contacts__item employee-contacts__item--address">
-                                    <address>Выкса — ВМЗ — ТЭСЦ4 — Участок покрытия</address>
+
+                                    <address><a href="#">Выкса — ВМЗ — ТЭСЦ4 — Участок покрытия</a></address>
+
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--phone">
                                     <a href="tel:882-99-10">882-99-10</a>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--mobile">
-                                    <a href="tel:+79099121410">+7 (909) 912-14-10</a>
+                                    <a href="tel:79099121410">+7 (909) 912-14-10</a>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--email">
                                     <a href="mailto:borisov_vn@omk.ru">borisov_vn@omk.ru</a>
