--- a/src/blocks/modules/footer/footer.scss
+++ b/src/blocks/modules/footer/footer.scss
@@ -10,7 +10,8 @@
         flex-wrap: wrap;
         justify-content: space-between;
         @media (max-width: $media-md) {
-            justify-content: center;
+            flex-direction: column;
+            align-items: center;
         }
     }
 
