--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -18,7 +18,7 @@
 @import 'modules/document-list/document-list';
 @import 'modules/select/select';
 @import 'modules/dataselect/dataselect';
-@import 'modules/unknown/unknown';
+@import 'modules/default-slider/default-slider';
 @import 'modules/header-search/header-search';
 @import 'modules/imagePopup/imagePopup';
 @import 'modules/profile-edit/profile-edit';
