--- a/src/templates/pages/news.html
+++ b/src/templates/pages/news.html
@@ -1056,7 +1056,7 @@
         </div>
     </section>
 
-    {% include 'unknown/unknown.html' %}
+    {% include 'default-slider/default-slider.html' %}
 
     <div class="tags">
         <div class="row">
