--- a/src/templates/pages/text-page.html
+++ b/src/templates/pages/text-page.html
@@ -44,13 +44,7 @@
                                             <!--[if IE 9]></video><![endif]-->
                                             <img src="img/AA5J7433.jpg"   title="" alt="">
                                         </picture>
-                                        <video class="video__player" controls preload="auto">
-                                            <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.mp4" type="video/mp4">
-                                            <!--                                        для лучшей поддержки набо еще подгружать второй сорс в видео в формате webm-->
-                                            <source src="https://timflach.com/wp-content/uploads/2014/02/SELECT_04_cut.webmhd.webm" type="video/webm">
-                                            Your browser does not support the video tag.
-                                        </video>
-                                        <div class="video__time"></div>
+                                        <div class="video__time">1:00</div>
                                     </div>
                                 </div>
                             </div>
