--- a/src/templates/pages/calendar.html
+++ b/src/templates/pages/calendar.html
@@ -1,6 +1,6 @@
 {% extends './layout.html' %}
 {% block content %}
-<div class="wrapper">
+<div class="wrapper calendar-page">
     <div class="row">
         <div class="col-12">
             {% include 'breadcrumbs/breadcrumbs.html' %}
@@ -8,7 +8,7 @@
     </div>
     <div class="row main-header">
         <div class="col-12">
-            <h1>Производственная система</h1>
+            <h1>Календарь</h1>
         </div>
     </div>
     <div class="row news__row">
@@ -62,10 +62,5 @@
             {% include 'calendar/calendar.html' %}
         </div>
     </div>
-
-
-
-
-
 </div>
 {% endblock %}
