--- a/src/blocks/modules/calendar/calendar.scss
+++ b/src/blocks/modules/calendar/calendar.scss
@@ -4,6 +4,15 @@
     min-width: 280px;
     border: 1px solid $border-10;
     border-radius: 5px;
+    margin-bottom: 48px;
+    @media (max-width: $media-sm) {
+        max-width: 382px;
+        margin: 0 auto 160px;
+        border: none;
+    }
+    @media (max-width: 360px) {
+        max-width: 288px;
+    }
 
     .calendar-nav {
         display: flex;
@@ -17,16 +26,83 @@
         font-weight: $font-weight-bold;
         line-height: 1.33;
         color: #1a1a1a;
+        @media (max-width: $media-sm) {
+            padding: 24px 8px;
+            font-size: rem(16);
+            line-height: 1.25;
+        }
+        @media (max-width: 413px) {
+            padding: 24px 6px;
+        }
+        @media (max-width: 383px) {
+            padding: 24px 4px;
+        }
+        @media (max-width: 360px) {
+            padding: 24px 3px;
+        }
+
+        .btn {
+            display: block;
+            width: 24px;
+            min-width: auto;
+            height: 24px;
+            border: none;
+            padding: 0;
+            border-radius: 0;
+            background: none;
+            &:hover {
+                polyline, line {
+                    stroke: $coral;
+                }
+            }
+
+            svg {
+                display: block;
+                width: 100%;
+                height: 100%;
+            }
+        }
     }
 
     .calendar-header, .calendar-body {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        @media (max-width: $media-sm) {
+            margin: 0 -8px;
+        }
+        @media (max-width: 413px) {
+            margin: 0 -6px;
+        }
+        @media (max-width: 383px) {
+            margin: 0 -4px;
+        }
+        @media (max-width: 360px) {
+            margin: 0 -3px;
+        }
 
         .calendar-date {
-            flex: 0 0 14.28%; // 7 calendar-items each row
+            flex: 0 0 14.28%;
             max-width: 14.28%;
+            @media (max-width: $media-sm) {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                max-width: 40px;
+                height: 40px;
+                margin: 0 8px 12px;
+            }
+            @media (max-width: 413px) {
+                margin: 0 6px 12px;
+            }
+            @media (max-width: 383px) {
+                margin: 0 4px 12px;
+            }
+            @media (max-width: 360px) {
+                max-width: 36px;
+                height: 36px;
+                margin: 0 3px 12px;
+            }
         }
     }
 
@@ -38,22 +114,65 @@
         color: $text-silver;
         text-align: center;
         padding-bottom: 16px;
+        @media (max-width: $media-sm) {
+            border: none;
+            padding-bottom: 12px;
+        }
+        .calendar-date {
+            height: auto;
+            border: none;
+        }
     }
 
     .calendar-body {
         color: $text-black;
+        padding: 0;
     }
 
     .calendar-date {
+        display: flex;
+        flex-direction: column;
+        height: 136px;
         border: 0;
+        padding: 0;
+        border-bottom: 1px solid $border-10;
+        border-right: 1px solid $border-10;
+        @media (max-width: $media-sm) {
+            width: 40px;
+            height: 40px;
+            border: none;
+            margin-bottom: 12px;
+            &:nth-last-child(-n+7) {
+                margin-bottom: 0;
+            }
+        }
+        @media (max-width: 413px) {
+            margin-bottom: 12px;
+            &:nth-last-child(-n+7) {
+                margin-bottom: 0;
+            }
+        }
+        @media (max-width: 383px) {
+            margin-bottom: 12px;
+            &:nth-last-child(-n+7) {
+                margin-bottom: 0;
+            }
+        }
+        @media (max-width: 360px) {
+            margin-bottom: 12px;
+            &:nth-last-child(-n+7) {
+                margin-bottom: 0;
+            }
+        }
 
         .date-item {
+            box-sizing: border-box;
+            align-self: flex-end;
             position: relative;
             width: 32px;
             height: 32px;
             border: 1px solid transparent;
             padding: .1rem;
-            transition: background .2s, border .2s, box-shadow .2s, color .2s;
             appearance: none;
             background: 0 0;
             border-radius: 50%;
@@ -66,40 +185,65 @@
             text-decoration: none;
             vertical-align: middle;
             white-space: nowrap;
+            margin-right: 8px;
+            margin-top: 8px;
+            @media (max-width: $media-sm) {
+                width: 100%;
+                height: 100%;
+                margin: 0;
+            }
+
+            &:focus {
+                border-color: rgba(246, 81, 69, 0.3);
+                color: $coral;
+            }
 
             &.date-today {
                 border-color: $border-10;
                 color: $text-black;
             }
-
-            //&:focus {
-            //	border-color: $coral;
-            //	color: $coral;
-            //}
-            ////
-            ////&:focus,
-            ////&:hover {
-            ////	background: $secondary-color-light;
-            ////	border-color: $secondary-color-dark;
-            ////	color: $primary-color;
-            ////	text-decoration: none;
-            ////}
-            //&:active,
-            //&.active {
-            //	background: $primary-color-dark;
-            //	border-color: darken($primary-color-dark, 5%);
-            //	color: $light-color;
-            //}
-            //
-            //// Calendar badge support
-            //&.badge {
-            //	&::after {
-            //		position: absolute;
-            //		top: 3px;
-            //		right: 3px;
-            //		transform: translate(50%, -50%);
-            //	}
-            //}
+            &:focus, &:hover {
+                border-color: rgba(246, 81, 69, 0.3);
+                border-width: 1px;
+                color: $coral;
+                text-decoration: none;
+            }
+            &:active, &.active {
+                border: solid 3px rgba(246, 81, 69, 0.3)!important;
+                border-radius: 100%;
+                background: $white;
+                color: $text-black;
+                &.badge {
+                    &:after {
+                        top: -5px;
+                        right: -5px;
+                        @media (max-width: $media-sm) {
+                            top: -2px;
+                            right: -2px;
+                        }
+                    }
+                }
+            }
+            &.badge {
+                &:after {
+                    content: '';
+                    box-sizing: content-box;
+                    display: block;
+                    position: absolute;
+                    top: -3px;
+                    right: -3px;
+                    width: 8px;
+                    height: 8px;
+                    border: solid 2px #ffffff;
+                    transition: none;
+                    background-color: #f65145;
+                    border-radius: 100%;
+                    @media (max-width: $media-sm) {
+                        top: 0;
+                        right: 0;
+                    }
+                }
+            }
         }
 
         .date-item, .calendar-event {
@@ -109,6 +253,13 @@
                 pointer-events: none;
             }
         }
+        &:nth-child(7n) {
+            border-right: 0;
+        }
+
+        &:nth-last-child(-n+7) {
+            border-bottom: 0;
+        }
 
         &.prev-month, &.next-month {
             .date-item, .calendar-event {
@@ -117,106 +268,111 @@
         }
     }
 
-    /*.calendar-range {
-		position: relative;
+    .calendar-range {
+        position: relative;
 
-		&::before {
-			background: $secondary-color;
-			content: "";
-			height: $unit-7;
-			left: 0;
-			position: absolute;
-			right: 0;
-			top: 50%;
-			transform: translateY(-50%);
-		}
-		&.range-start {
-			&::before {
-				left: 50%;
-			}
-		}
-		&.range-end {
-			&::before {
-				right: 50%;
-			}
-		}
+        .date-item {
+            color: $coral;
+        }
 
-		&.range-start,
-		&.range-end {
-			.date-item {
-				background: $primary-color-dark;
-				border-color: darken($primary-color-dark, 5%);
-				color: $light-color;
-			}
-		}
+        &::before {
+            content: '';
+            position: absolute;
+            top: 8px;
+            right: 0;
+            left: 0;
+            height: 32px;
+            background: fade_out($coral, .9);
+        }
 
-		.date-item {
-			color: $primary-color;
-		}
-	}
+        &.range-start {
+            &::before {
+                left: calc(100% - 24px);
+            }
+        }
 
-	// Calendars size
-	&.calendar-lg {
-		.calendar-body {
-			padding: 0;
+        &.range-end {
+            &::before {
+                right: 24px;
+            }
+        }
 
-			.calendar-date {
-				border-bottom: $border-width solid $border-color;
-				border-right: $border-width solid $border-color;
-				display: flex;
-				flex-direction: column;
-				height: 5.5rem;
-				padding: 0;
+        &.range-start, &.range-end {
+            .date-item {
+                background: $coral;
+                border-color: $coral;
+                color: $white;
+            }
+        }
+    }
 
-				&:nth-child(7n) {
-					border-right: 0;
-				}
-				&:nth-last-child(-n+7) {
-					border-bottom: 0;
-				}
-			}
-		}
+    .calendar-events {
+        margin-top: 8px;
+        @media (max-width: $media-sm) {
+            display: none;
+        }
+    }
 
-		.date-item {
-			align-self: flex-end;
-			height: $unit-7;
-			margin-right: $layout-spacing-sm;
-			margin-top: $layout-spacing-sm;
-		}
+    .calendar-event {
+        display: block;
+        position: relative;
+        overflow: hidden;
+        margin: 0 8px 5px;
+        padding: 1px 6px 3px;
+        border-radius: 5px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        font-size: rem(14);
+        line-height: 1.43;
+        color: $white;
+        cursor: pointer;
 
-		.calendar-range {
-			&::before {
-				top: 19px;
-			}
-			&.range-start {
-				&::before {
-					left: auto;
-					width: 19px;
-				}
-			}
-			&.range-end {
-				&::before {
-					right: 19px;
-				}
-			}
-		}
+        &:hover {
+            text-decoration: none;
+        }
 
-		.calendar-events {
-			flex-grow: 1;
-			line-height: 1;
-			overflow-y: auto;
-			padding: $layout-spacing-sm;
-		}
-
-		.calendar-event {
-			border-radius: $border-radius;
-			font-size: $font-size-sm;
-			display: block;
-			margin: $unit-h auto;
-			overflow: hidden;
-			padding: 3px 4px;
-			text-overflow: ellipsis;
-			white-space: nowrap;
-		}
-	}*/
+        &__info {
+            position: absolute;
+            bottom: calc(100% - 2px);
+            left: 50%;
+            transform: translateX(-50%);
+        }
+        &--red {
+            background-color: $coral;
+            &:hover {
+                background-color: $coral-dark;
+            }
+        }
+        &--green {
+            background-color: $green;
+            &:hover {
+                background-color: $green-dark;
+            }
+        }
+        &--ctrl {
+            background-color: $ctrl-black;
+            &:hover {
+                background-color: darken($ctrl-black, 5%);
+            }
+        }
+        &--show-more {
+            color: $text-silver;
+            background-color: $silver-light;
+            text-align: center;
+        }
+    }
 }
+
+.calendar-page {
+    .main-header {
+        margin-bottom: 24px;
+        h1 {
+            margin-bottom: 0;
+        }
+    }
+
+    .news__row {
+        margin-bottom: 32px;
+    }
+}
+
