--- a/src/templates/pages/best-practics.html
+++ b/src/templates/pages/best-practics.html
@@ -9,7 +9,7 @@
     <section class="practices">
         <div class="row ">
             <div class="col-12">
-                <div class="main-header">
+                <div class="main-header main-header--practices">
                     <h1>Лучшие практики</h1>
                 </div>
             </div>
