--- a/src/templates/pages/calendar.html
+++ b/src/templates/pages/calendar.html
@@ -62,5 +62,68 @@
             {% include 'calendar/calendar.html' %}
         </div>
     </div>
+    <div id="event_0" class="calendar-event__info">
+        <div class="calendar-event__info-header">
+            <div class="date">8 мая</div>
+            <div class="time time--red">12:00</div>
+        </div>
+        <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
+        <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
+        <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
+    </div>
+    <div id="event_1" class="calendar-event__info">
+        <div class="calendar-event__info-header">
+            <div class="date">8 мая</div>
+            <div class="time time--red">12:00</div>
+        </div>
+        <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
+        <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
+        <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
+    </div>
+    <div id="event_2" class="calendar-event__info">
+        <div class="calendar-event__info-header">
+            <div class="date">8 мая</div>
+            <div class="time time--red">12:00</div>
+        </div>
+        <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
+        <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
+        <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
+    </div>
+    <div id="event_3" class="calendar-event__info">
+        <div class="calendar-event__info-header">
+            <div class="date">8 мая</div>
+            <div class="time time--red">12:00</div>
+        </div>
+        <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
+        <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
+        <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
+    </div>
+    <div id="event_4" class="calendar-event__info">
+        <div class="calendar-event__info-header">
+            <div class="date">8 мая</div>
+            <div class="time time--red">12:00</div>
+        </div>
+        <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
+        <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
+        <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
+    </div>
+    <div id="event_5" class="calendar-event__info">
+        <div class="calendar-event__info-header">
+            <div class="date">8 мая</div>
+            <div class="time time--ctrl">12:00</div>
+        </div>
+        <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
+        <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
+        <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
+    </div>
+    <div id="event_6" class="calendar-event__info">
+        <div class="calendar-event__info-header">
+            <div class="date">8 мая</div>
+            <div class="time time--green">12:00</div>
+        </div>
+        <div class="calendar-event__info-title">Встреча на тему как лучше себя вести на встречах чтоб тебя все услышали</div>
+        <div class="calendar-event__info-desc">Валентин Валерьевич Водолазов делится секретами успеха и объясняет как держать их в секрете</div>
+        <div class="calendar-event__info-place">ВМЗ — Цех №1 — Переговорка «Двутавр»</div>
+    </div>
 </div>
 {% endblock %}
