--- a/src/blocks/modules/calendar/calendar.scss
+++ b/src/blocks/modules/calendar/calendar.scss
@@ -9,7 +9,7 @@
     margin-bottom: 48px;
     @media (max-width: $media-sm) {
         max-width: 382px;
-        margin: 0 auto 160px;
+        margin: 0 auto 32px;
         border: none;
     }
     @media (max-width: 360px) {
@@ -310,7 +310,7 @@
 
     .calendar-events {
         margin-top: 8px;
-        @media (max-width: $media-sm) {
+        @media (max-width: $media-lg) {
             display: none;
         }
     }
@@ -318,16 +318,10 @@
     .calendar-event {
         display: block;
         position: relative;
+        cursor: default;
 
         &:hover {
             text-decoration: none;
-            @media (min-width:$media-lg--min) {
-                .calendar-event__info {
-                    bottom: calc(100% + 4px);
-                    opacity: 1;
-                    pointer-events: all;
-                }
-            }
         }
 
         &__name {
@@ -456,6 +450,7 @@
             }
         }
         &--show-more {
+            cursor: pointer;
             .calendar-event__name {
                 color: $text-silver;
                 background-color: $silver-light;
@@ -475,6 +470,102 @@
 
     .news__row {
         margin-bottom: 32px;
+        position: relative;
+        z-index: 13;
+    }
+}
+
+.calendar-event__info {
+    @include transition();
+    display: block;
+    position: absolute;
+    z-index: 3;
+    bottom: 0;
+    width: 296px;
+    padding: 20px;
+    transform: translateX(-25%);
+    pointer-events: none;
+    opacity: 0;
+    box-shadow: 0 8px 40px 0 rgba(0, 0, 0, 0.2);
+    background-color: #ffffff;
+    border-radius: 8px;
+    &:after {
+        content: '';
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        width: 6px;
+        height: 16px;
+        border: 8px solid transparent;
+        transform: translateX(-50%);
+        border-top-color: #fff;
+    }
+    &:before {
+        content: '';
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 12px;
+        background-color: transparent;
+    }
+
+    &.show {
+        @media (min-width:$media-lg--min) {
+            z-index: 999;
+            bottom: auto;
+            opacity: 1;
+            pointer-events: all;
+        }
+    }
+
+    &-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 8px;
+        .date {
+            font-size: rem(16);
+            line-height: 1.25;
+        }
+
+        .time {
+            min-width: 48px;
+            padding: 3px 4px 5px;
+            border-radius: 12px;
+            font-size: 14px;
+            line-height: 1.14;
+            text-align: center;
+            color: $white;
+            &--red {
+                background-color: $coral;
+            }
+            &--green {
+                background-color: $green;
+            }
+            &--ctrl {
+                background-color: $ctrl-black;
+            }
+        }
+    }
+
+    &-title {
+        margin-bottom: 12px;
+        font-size: rem(20);
+        font-weight: bold;
+        line-height: 1.2;
+    }
+
+    &-desc {
+        margin-bottom: 12px;
+        font-size: rem(16);
+        line-height: 1.25;
+    }
+    &-place {
+        margin-bottom: 8px;
+        font-size: rem(14);
+        line-height: 1.43;
+        color: $text-silver;
     }
 }
 
@@ -482,6 +573,7 @@
 .events-list {
 
     .modal-dialog {
+        width: 100%;
         max-width: 616px;
         @media (max-width: $media-sm) {
             margin: 0;
@@ -508,19 +600,28 @@
         @media (max-width: $media-sm) {
             position: relative;
             z-index: -1;
+            border: 0;
             padding: 64px 32px 48px;
             border-radius: 0;
         }
 
         .calendar-event__info {
             display: block;
+            position: static;
             z-index: 3;
             width: 100%;
             padding: 20px 0;
+            transform: none;
+            opacity: 1;
             background-color: #ffffff;
+            border-radius: 0;
+            box-shadow: none;
             border-bottom: 1px solid $border-10;
             &:last-of-type {
                 border-bottom: 0;
+            }
+            &:after, &:before {
+                display: none;
             }
 
 
