--- a/src/blocks/modules/card/card.scss
+++ b/src/blocks/modules/card/card.scss
@@ -307,6 +307,10 @@
         }
     }
 
+    &--brb{
+        border-radius: 5px 5px 5px 5px;
+    }
+
     &-img {
         display: block;
         max-height: 200px;
