--- a/src/blocks/modules/practices/practices__widget.scss
+++ b/src/blocks/modules/practices/practices__widget.scss
@@ -97,6 +97,11 @@
     }
     .card {
         margin-bottom: 48px;
+
+        @media (max-width: $media-lg){
+            transform: translate(0, 0);
+            box-shadow: none;
+        }
         @media (max-width: $media-lg) {
             margin-bottom: 24px;
 
