--- a/src/templates/pages/best-practics.html
+++ b/src/templates/pages/best-practics.html
@@ -155,7 +155,7 @@
                 <div class="header-block">
                     <h2>Видео</h2>
                 </div>
-                <a href="/" class="card">
+                <a href="/" class="card card--brb">
                     <picture class="card-img">
                         <!--[if IE 9]>
                         <video style="display: none;"><![endif]-->
@@ -163,12 +163,6 @@
                         <!--[if IE 9]></video><![endif]-->
                         <img src="img/07-d.svg" title="" alt="...">
                     </picture>
-                    <div class="card-body">
-                        <h5 class="card-title">Лучшие в металлургии</h5>
-                    </div>
-                    <div class="card-footer">
-                        <div class="card-date">Обновлен 10 фев</div>
-                    </div>
                 </a>
             </div>
 
@@ -176,7 +170,7 @@
                 <div class="header-block">
                     <h2>Абсурды</h2>
                 </div>
-                <a href="/" class="card">
+                <a href="/" class="card card--brb">
                     <picture class="card-img">
                         <!--[if IE 9]>
                         <video style="display: none;"><![endif]-->
@@ -184,12 +178,6 @@
                         <!--[if IE 9]></video><![endif]-->
                         <img src="img/08-d.svg" title="" alt="...">
                     </picture>
-                    <div class="card-body">
-                        <h5 class="card-title">Лучшие в металлургии</h5>
-                    </div>
-                    <div class="card-footer">
-                        <div class="card-date">Обновлен 10 фев</div>
-                    </div>
                 </a>
             </div>
         </div>
