--- a/src/templates/pages/obhod-duo.html
+++ b/src/templates/pages/obhod-duo.html
@@ -953,14 +953,13 @@
             </div>
         </section>
     </div>
-    <section class="detours detours--slider">
+    <section class="detours detours--slider psystem">
         <div class="wrapper">
             <div class="row">
                 <div class="col-12 header-block">
                     <h2>Другие обходы</h2>
                     <div class="header-block__btn">
-                        <a href="obhod.html" class="btn">Все обходы <i
-                                class="btn__icon btn__icon--right btn__icon--arrow-right"></i></a>
+                        <a href="obhod.html" class="btn">Все <span>обходы</span> <i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></a>
                     </div>
                 </div>
             </div>
