fix font time load 3

--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -4,7 +4,7 @@
     url('../fonts/SegoeUI-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
-    font-display: swap;
+    //font-display: swap;
 }
 @font-face {
     font-family: 'SegoeUI';
@@ -12,7 +12,7 @@
         url('../fonts/SegoeUI-Italic.woff') format('woff');
     font-weight: 400;
     font-style: italic;
-    font-display: swap;
+    //font-display: swap;
 }
 @font-face {
     font-family: 'SegoeUI';
@@ -20,7 +20,7 @@
     url('../fonts/SegoeUI.woff') format('woff');
     font-weight: 400;
     font-style: normal;
-    font-display: swap;
+    //font-display: swap;
 }
 @font-face {
     font-family: 'SegoeUI';
@@ -28,7 +28,7 @@
     url('../fonts/SegoeUI-SemiBold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
-    font-display: swap;
+    //font-display: swap;
 }
 @font-face {
     font-family: 'SegoeUI';
@@ -36,7 +36,7 @@
     url('../fonts/SegoeUI-Bold.woff') format('woff');
     font-weight: 700;
     font-style: normal;
-    font-display: swap;
+    //font-display: swap;
 }
 //@font-face {
 //    font-family: 'SegoeUI';
