fix font time load 3

--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -61,7 +61,7 @@ $container-max-widths: (
     xl: 1120px
 );
 
-$font-family-sans-serif: 'SegoeUI';
+$font-family-sans-serif: 'SegoeUI', sans-serif;
 $grid-columns: 12;
 $grid-gutter-width: 32px;
 
