--- a/src/templates/pages/ps-main.html
+++ b/src/templates/pages/ps-main.html
@@ -443,7 +443,7 @@
             <div class="col-12">
                 <h2>Лучшие практики</h2>
                 <div class="header-block__btn">
-                    <a href=#0" class="btn"><span>Смотреть</span> все <i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></a>
+                    <a href="#0" class="btn"><span>Смотреть</span> все <i class="btn__icon btn__icon--right btn__icon--arrow-right"></i></a>
                 </div>
             </div>
         </div>
