--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -2,6 +2,7 @@ html {
     display: flex;
     flex-direction: column;
     min-height: 100%;
+    font-family: $font-family-sans-serif;
 }
 
 body {
