--- a/src/blocks/modules/galleryThumbs/galleryThumbs.scss
+++ b/src/blocks/modules/galleryThumbs/galleryThumbs.scss
@@ -121,6 +121,7 @@
                 padding-bottom: 66.3%;
                 border-bottom: 0;
                 background-color: #1a1a1a;
+                margin-bottom: 0;
             }
             &__preview {
                 @include object-fit(cover, center);
@@ -193,6 +194,7 @@
                     max-height: 100%;
                     border: solid 2px $white;
                     background: none;
+                    z-index: 3;
                 }
             }
         }
