--- a/src/styles/pages/main-page.scss
+++ b/src/styles/pages/main-page.scss
@@ -54,6 +54,7 @@
             margin-left: 0;
         }
         .swiper-slide {
+            display: block;
             @media(max-width: $media-md) {
                 .card {
                     border-radius: 0;
@@ -71,7 +72,10 @@
                 border: none;
             }
             .card--image {
+                flex: 1 1 100%;
                 position: relative;
+                width: 100%;
+                min-width: 100%;
                 &:after {
                     content: '';
                     position: absolute;
@@ -80,6 +84,11 @@
                     bottom: 0;
                     left: 0;
                     background-color: rgba(0, 0, 0, 0.2);
+                }
+                .card-body {
+                    flex-basis: 100%;
+                    width: 100%;
+                    min-width: 100%;
                 }
                 .card-title {
                     @media (max-width: $media-xl) {
@@ -240,6 +249,8 @@
         justify-content: flex-start;
         position: absolute;
         top: 0;
+        right: 0;
+        bottom: 0;
         left: 0;
         width: 100%;
         height: 100%;
@@ -249,6 +260,8 @@
         }
 
         .title {
+            display: block;
+            width: 100%;
             font-size: rem(16);
             font-weight: $font-weight-bold;
             line-height: 1.25;
@@ -260,6 +273,8 @@
             }
         }
         .text {
+            display: block;
+            width: 100%;
             font-size: rem(20);
             font-weight: $font-weight-bold;
             line-height: 1.2;
