--- a/src/styles/pages/obhod.scss
+++ b/src/styles/pages/obhod.scss
@@ -611,9 +611,9 @@
             @media(max-width: $media-lg) {
                 margin-bottom: 0;
             }
-            hr {
-                display: none;
-            }
+            //hr {
+            //    display: none;
+            //}
         }
     }
 
