--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -62,6 +62,7 @@ $container-max-widths: (
 );
 
 $font-family-sans-serif: 'SegoeUI', sans-serif;
+//'SegoeUI', system-ui, -apple-system, Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 $grid-columns: 12;
 $grid-gutter-width: 32px;
 
