--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -1,97 +1,43 @@
 @font-face {
     font-family: 'SegoeUI';
-    src: url('../fonts/SegoeUI-Light.ttf') format('truetype'),
-        url('../fonts/SegoeUI-Light.woff') format('woff');
+    src: url('../fonts/SegoeUILight.woff2') format('woff2'),
+        url('../fonts/SegoeUILight.woff') format('woff');
     font-weight: 300;
     font-style: normal;
-    //font-display: swap;
+    font-display: swap;
 }
 @font-face {
     font-family: 'SegoeUI';
-    src: url('../fonts/SegoeUI-Italic.ttf') format('truetype'),
-        url('../fonts/SegoeUI-Italic.woff') format('woff');
+    src: url('../fonts/SegoeUIItalic.woff2') format('woff2'),
+        url('../fonts/SegoeUIItalic.woff') format('woff');
     font-weight: 400;
     font-style: italic;
-    //font-display: swap;
+    font-display: swap;
 }
 @font-face {
     font-family: 'SegoeUI';
-    src: url('../fonts/SegoeUI.ttf') format('truetype'),
+    src: url('../fonts/SegoeUI.woff2') format('woff2'),
         url('../fonts/SegoeUI.woff') format('woff');
     font-weight: 400;
     font-style: normal;
-    //font-display: swap;
+    font-display: swap;
 }
 @font-face {
     font-family: 'SegoeUI';
-    src: url('../fonts/SegoeUI-SemiBold.ttf') format('truetype'),
-        url('../fonts/SegoeUI-SemiBold.woff') format('woff');
+    src: url('../fonts/SegoeUISemiBold.woff2') format('woff2'),
+        url('../fonts/SegoeUISemiBold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
-    //font-display: swap;
+    font-display: swap;
 }
 @font-face {
     font-family: 'SegoeUI';
-    src:  url('../fonts/SegoeUI-Bold.ttf') format('truetype'),
-        url('../fonts/SegoeUI-Bold.woff') format('woff');
+    src:  url('../fonts/SegoeUIBold.woff2') format('woff2'),
+        url('../fonts/SegoeUIBold.woff') format('woff');
     font-weight: 700;
     font-style: normal;
-    //font-display: swap;
+    font-display: swap;
 }
-//@font-face {
-//    font-family: 'SegoeUI';
-//    src: url('../fonts/SegoeUIItalic.eot');
-//    src: url('../fonts/SegoeUIItalic.eot?#iefix') format('embedded-opentype'),
-//        url('../fonts/SegoeUIItalic.woff2') format('woff2');
-//    font-weight: 400;
-//    font-style: italic;
-//    font-display: swap;
-//}
-
-
-//@font-face {
-//    font-family: 'SegoeUI';
-//    src: url('../fonts/SegoeUILight.eot');
-//    src: url('../fonts/SegoeUILight.eot?#iefix') format('embedded-opentype'),
-//        url('../fonts/SegoeUILight.woff2') format('woff2');
-//    font-weight: 300;
-//    font-style: normal;
-//    font-display: swap;
-//}
-
-
-
-//@font-face {
-//    font-family: 'SegoeUI';
-//    src: url('../fonts/SegoeUIRegular.eot');
-//    src: url('../fonts/SegoeUIRegular.eot?#iefix') format('embedded-opentype'),
-//        url('../fonts/SegoeUIRegular.woff2') format('woff2');
-//    font-weight: 400;
-//    font-style: normal;
-//    font-display: swap;
-//}
-
-
-//@font-face {
-//    font-family: 'SegoeUI';
-//    src: url('../fonts/SegoeUISemiBold.eot');
-//    src: url('../fonts/SegoeUISemiBold.eot?#iefix') format('embedded-opentype'),
-//        url('../fonts/SegoeUISemiBold.woff2') format('woff2');
-//    font-weight: 600;
-//    font-style: normal;
-//    font-display: swap;
-//}
-
-
-//@font-face {
-//    font-family: 'SegoeUI';
-//    src: url('../fonts/SegoeUIBold.eot');
-//    src: url('../fonts/SegoeUIBold.eot?#iefix') format('embedded-opentype'),
-//        url('../fonts/SegoeUIBold.woff2') format('woff2');
-//    font-weight: 700;
-//    font-style: normal;
-//    font-display: swap;
-//}
 
 h1 {
     font-size: rem(56);
