--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -218,7 +218,9 @@ body {
     min-height: 100%;
 
     &__content {
+        display: flex;
         flex: 1 1 auto;
+        flex-direction: column;
     }
 }
 
